preview/styles.css
/* This file contains the CSS for Hurmet.app
 * Parts of this file were once in separate files.
 * That being the ProseMirror editor section and tables section.
 * temml.css is included here as well.
 * These are now all combined in this one file to reduce the number of HTML
 * requests and to make it easier to minify all the CSS.
 */

 html {
  background: white;
  overflow-y: scroll;
  overflow-x: hidden;
}

body {
  margin: 0 0 5px;
  line-height: 1.45;
  background: white;
  font-family: Calibri, 'Helvetica Neue', Arial, Cambria, sans-serif;
  font-size: 12pt;
  position: relative;
  counter-reset: pageNum 1;
}
.long-primer { font-size: 10pt; }

nav {
  max-width: 838px;
  margin: 0 auto;
  background: #fff;
  font-size: 14px;
  height: 66px
}

nav * {
  font-family: Arial, sans-serif;
}

nav ul {
  list-style: none;
  margin-top: 24px;
  padding: 0;
  float: right;
}

nav ul li {
  display: inline-block;
  padding-top: 5px;
  text-decoration: none
}

nav  a {
  padding: 5px 0 0 18px;
  text-decoration: none;
  color: inherit;
}

nav li details {
  padding-left: 1em;
  cursor: pointer;
}

nav ul li ul li {
  display: block;
  padding-top: 0.4em;
}

nav ul li ul li a {
  padding: 0 0 0 18px;
}
article {
  max-width: 838px;
  margin: 0 auto;
}
.show-hint article {
  margin: 0 calc((100% - 880px) / 2);
}

code {
  padding: .125rem .3125rem .0625rem;
  background-color: #e6e6e6;
  font-family: Consolas,"Liberation Mono",Courier,monospace;
  font-weight: 400;
  color: #0a0a0a;
}

.hmt-code {
  white-space: pre;
  background-color: #f6f8fa;
  font-family: Consolas,"Liberation Mono",Courier,monospace;
  font-weight: normal;
  font-size: 0.9em;
}

pre {
  padding: 10px;
}

pre code {
  background-color: #f6f8fa;
  font-weight: normal;
  font-size: 0.9em;
}

h1, h2, h3, h5 {
  font-family: Verdana, sans-serif;
  font-variant: small-caps;
  letter-spacing: 0.05em;
  font-weight: bold;
  margin: 1em 0 1em 0;
}
			 
h1 { font-size: 120%; margin-top: 3em; }
h2 { font-size: 105%; margin-top: 2em; }
h3 { font-size: 100%; margin-top: 1em; }
h4 { font-size: 100%; margin: 1em 0 1em 0; font-weight: bold; }
h5 { font-size: 110%; text-align: center; }
h6 { font-size: 95%; font-weight: bold; text-align: center;  margin: 1em 0 1em 0; }

#promotion {
  position: relative;
  float: left;
  width: calc(50% - 430px);
  z-index: 1;
}
#small-title {
  float: left;
  font-family: Tahoma, Calibri, san-serif;
  font-weight: bold;
  font-size: 20px;
  padding-left: 72px;
  margin-top: 24px;
  display: none;
}
@media (max-width: 1120px) {
  #promotion   { display: none; }
  #small-title { display: inline; }
}
#title {
  font-family: Tahoma, Calibri, san-serif;
  font-weight: bold;
  font-size: 32px;
  width: 170px;
  padding: 12px 6px 0;
  margin: 0 auto;
}

#slogan {
  font-family: Bahnschrift, Calibri, san-serif;
  font-weight: bold;
  font-size: 20px;
  width: 170px;
  padding: 25px 6px;
  margin: 0 auto;
}

strong { font-weight: bold; }

article {
  padding: 10px 3px 100px;
}

#copyright {
  max-width: 838px;
  margin: 0 auto;
  font-family: Arial, sans-serif;
  font-size: 10px;
  text-align: center;
}

#copyright a {
  color: inherit;
}

/* For printed documents */
@media screen {
  #print-div { display: none; }
}
div #print-div { width: 672px; font-size: 12pt; }
div #print-div .long-primer { font-size: 10 pt; }
.header { break-before: page; counter-increment: pageNum; }
.page-display::after { content: counter(pageNum); }
th {
  font-weight: normal;
  text-align:left;
  padding: 3px;
  min-height: 1em;
}
th p { line-height: 1.6; }
th:last-child .page-display { float: right; }
th:first-child .page-display { float: left; }

/* Image placement */
.inline {
  display: inline;
}
.right {
  display: block;
  float: right
}
.left {
  display: block;
  float: left
}
.center {
  display: block;
  margin: 0 auto;
}

.ProseMirror-prompt input[type="radio"] {
  margin-left: 8px;
}

.ProseMirror-prompt label {
  margin-left: 2px;
}

/*
 * The section below pertains to the editor.
 * Most of this section comes from ProseMirror sources
 */

 .ProseMirror {
  position: relative;
  content-visibility: auto;
  contain-intrinsic-size: 1000px;
}

.ProseMirror {
  word-wrap: break-word;
  white-space: pre-wrap;
  -webkit-font-variant-ligatures: none;
  font-variant-ligatures: none;
}

.ProseMirror pre {
  display: inline-block;
  margin-left: 1em;
  margin-bottom: 1em;
  white-space: pre-wrap;
}

.ProseMirror pre > code {
  padding: 0;
}

.ProseMirror span > pre {
  padding: 0;
  margin: 0 0 0 2em;
}

.ProseMirror span > pre > code {
  margin: 0;
}

.ProseMirror .hurmet-calc,
.ProseMirror .hurmet-tex {
  white-space: normal;
  padding: 4px;
}

.ProseMirror .hurmet-calc code {
  white-space: pre-wrap;
  background-color: transparent;
}

.ProseMirror li {
  position: relative;
}

.ProseMirror li.tight > p {
  margin: -0.5em 0 0.75em 0;
}
.ProseMirror td > ul > li.tight:first-child > p {
  margin-top: 0em;
}

.ProseMirror-hideselection *::selection { background: transparent; }
.ProseMirror-hideselection *::-moz-selection { background: transparent; }
.ProseMirror-hideselection { caret-color: transparent; }

.ProseMirror-selectednode {
  outline: 2px solid #8cf;
}

/* Make sure li selections wrap around markers */

li.ProseMirror-selectednode {
  outline: none;
}

li.ProseMirror-selectednode:after {
  content: "";
  position: absolute;
  left: -32px;
  right: -2px; top: -2px; bottom: -2px;
  border: 2px solid #8cf;
  pointer-events: none;
}
.ProseMirror-textblock-dropdown {
  min-width: 3em;
}

.ProseMirror-menu {
  margin: 0 -4px;
  line-height: 1;
}

.ProseMirror-tooltip .ProseMirror-menu {
  width: -webkit-fit-content;
  width: fit-content;
  white-space: pre;
}

.ProseMirror-menuitem {
  margin-right: 3px;
  display: inline-block;
  cursor: pointer;
}

.ProseMirror-menuseparator {
  border-right: 1px solid #ddd;
  margin-right: 3px;
}
/* ... */

